--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: julia
+    password:
+  h2:
+    console:
+      enabled: true
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
   output:
     ansi:
       enabled: always
