--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -3,9 +3,9 @@ spring:
     activate:
       on-profile: production
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/app}
-    username: ${DB_USERNAME:postgres}
-    password: ${DB_PASSWORD:password}
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
